<resources>
    <string name="app_name">GoogleMaps2018</string>

    <string-array name="routes">
        <item>Not Select Route</item>
        <item>Route -1</item>
        <item>Route -2 </item>
        <item>Route -3 </item>
        <item>Route -4</item>
    </string-array>

    <string-array name="numbers">
        <item>Tilagor Point</item>
        <item>Baluchar Point </item>
        <item>TB Gate </item>
        <item>Eidgah point</item>
        <item>Electric Supply</item>
        <item>Ambarkhana Road</item>
        <item>Dorshondewry Point</item>
        <item>Subid Bazar</item>
        <item>Londony point</item>
        <item>Pathantula point</item>
        <item>Madina Market</item>
        <item>Sust Gate</item>
        <item>Temukhi Point</item>
        <item>Rail Crossing,kamalBazar</item>
        <item>Shibgonj point</item>
        <item>Naiorpul point</item>
        <item>Osmani Park point</item>

        <item>Surma Tower</item>
        <item>Kazir Bazer bridge point</item>
        <item>Lamabazar point</item>
        <item>Rikabi Bazar Road</item>
        <item>Radio office ponit</item>
        <item>Lakkatura </item>
        <item>Chowkidekhi Road</item>
        <item>Subhanighat </item>
        <item>Khasdabir </item>
        <item>Rose View Hotel point</item>

        <item>Humayun Rashid Square</item>
        <item>chandirpool point</item>
        <item>Bypass,south surma</item>

    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="studentsignin">Are you already registered ? Sign In</string>
    <string name="studentsignup">Are you not registered ? Sign Up</string>
    <string name="driverSignin">Are you already registered ? Sign In</string>
    <string name="driverSignup">Are you not registered ? Sign Up</string>
    <string name="nameignup">Select your driving route \n আপনার ড্রাইভিং রুট নির্বাচন করুন</string>

    <string name="register">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>
    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_map">Map</string>
    <string name="title_activity_student__maps">Map</string>
    <string name="title_activity_driver__maps">Map</string>


</resources>
