<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DriverRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">






                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_below="@+id/input_email"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:layout_below="@+id/input_password"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#00796B"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_below="@+id/input_confirm_password"
                    android:text="@string/register"
                    />

                <TextView
                    android:id="@+id/orid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_register"
                    android:gravity="center"
                    android:text="----------------------------------- or -----------------------------------"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_below="@+id/orid"
                    android:id="@+id/driverSigninid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:text="@string/driverSignin" />

            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:visibility="invisible"/>

</RelativeLayout>