<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EEF8"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StudentRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="150dp"
                    android:layout_marginLeft="100dp"
                    android:layout_height="150dp"
                    android:src="@drawable/lu1" />
                <EditText
                    android:id="@+id/studentId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/img"
                    android:hint="Id"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:layout_below="@+id/studentId"
                    />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_below="@+id/input_email"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:layout_below="@+id/input_password"/>


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#9671C2"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="false"
                    android:layout_below="@+id/input_confirm_password"
                    android:text="@string/register"
                    />
                <TextView
                    android:id="@+id/orid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_register"
                    android:gravity="center"
                    android:text="----------------------------------- or -----------------------------------"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_below="@+id/orid"
                    android:id="@+id/studentsigninid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="80dp"
                    android:text="@string/studentsignin" />

            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:visibility="invisible"/>

</RelativeLayout>